<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_questions"
    android:orientation="vertical"
    tools:context=".TwoActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@color/radio_group_background"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/question2"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/otvet1RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_activity_answer1"
            android:checked="false"/>

        <RadioButton
            android:id="@+id/otvet2RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_activity_answer2"
            android:checked="false"/>

        <RadioButton
            android:id="@+id/otvet3RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_activity_answer3"
            android:checked="false"/>

        <RadioButton
            android:id="@+id/otvet4RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_activity_answer4"
            android:checked="false"/>

    </RadioGroup>

    <TextView
        android:id="@+id/resultAnswerTV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"/>

</LinearLayout>